# Hydraw-DAW

./: .gitignore  AGENTS.md  ARCHITECTURE_SPEC.md  AUDIT_ROADMAP.md  CLAP_HOST_SPEC.md  CMakeLists.txt  CREDITS.md  DECISIONS.md  PERSISTENCE_SPEC.md  README.md  ROADMAP.md  imgui.ini
.github/workflows/: pages.yml  release.yml
.opencode/skills/imgui-ui/: SKILL.md
assets/: index.html
cmake/: FetchDependencies.cmake
contrib/webview-migration/: README.md  index.html
docs/: index.html  script.js  style.css
scripts/: install_deps.sh
src/: AudioEngine.cpp  AudioEngine.h  GuiLayer.cpp  GuiLayer.h  MixerPanel.cpp  MixerPanel.h  TimelinePanel.cpp  TimelinePanel.h  main.cpp
src/Audio/: IAudioObserver.h  IHostExtensions.h  ILogSink.h
src/Core/: Constants.h  Types.h
src/DSP/: SoftClipper.h
src/Export/: WavWriter.h
src/Plugin/: ClapHost.h  PluginChain.cpp  PluginChain.h
src/Project/: ProjectSerializer.cpp  ProjectSerializer.h
src/Util/: Base64.h  Logger.h  PathUtils.h
